tests/samples/negative/types/const_invalid_storage.ax
module const_invalid_storage;

const bad: void = 0;

fn main() -> i32 {
    return 0;
}
